--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,53 @@
-body {
-  margin: 0;
-  padding: 0;
-  font-family: sans-serif;
+/* Custom Font Definition */
+@font-face {
+  font-family: 'overpass';
+  src: url(../src/fonts/overpass-heavy.otf);
+}
+
+@font-face {
+  font-family: 'paintball';
+  src: url(../src/fonts/Paintball.ttf);
+}
+
+/* Small screen display */
+@media only screen and (min-width: 200px) and (max-width: 1024px) {
+  .mainBackground {
+    background-image: url("./images/paintBackground.png");
+    background-color: rgba(255, 255, 255, 0.2);
+    background-blend-mode: lighten;
+  }
+}
+
+/* Medium to large display */
+@media only screen and (min-width: 1025px) and (max-width: 1440px) {
+  .mainBackground {
+    background-image: url("./images/bodyBackground.png");
+    background-color: rgba(255, 255, 255, 0.7);
+    background-blend-mode: lighten;
+  }
+}
+
+.mainBackground {
+  top: 0px;
+  left: 0px;
+  position: absolute;
+  background-attachment: fixed;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  width: 100%;
+  min-height: 100vh;
+}
+
+.siteTitle {
+  font-family: 'paintball';
+  display: block;
+  width: 100%;
+  margin: 0%, auto;
+  margin-top: 1%;
+  margin-bottom: 0%;
+  text-align: center;
+  background: linear-gradient(to bottom, #ff43b7, #7aff42);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
 }
