--- a/src/index.css
+++ b/src/index.css
@@ -28,7 +28,8 @@
 }
 
 .displayIcon {
-  margin-top: 2vh;
+  width: 100%;
+  height: auto;
 }
 
 .divBorder {
@@ -39,6 +40,8 @@
 
 .formSettings {
   margin-top: 5vh;
+  margin-left: 3vh;
+  margin-right: 3vh;
   background-color: white;
 }
 
@@ -56,11 +59,12 @@
 
 .siteTitle {
   font-family: 'paintball';
+  font-size: 3em;
   display: block;
-  width: 100%;
-  margin: 0%, auto;
+  /* width: 100%;
+  margin: 0%, auto; */
   margin-top: 1%;
-  margin-bottom: 0%;
+  margin-bottom: 1%;
   text-align: center;
   background: linear-gradient(to bottom, #ff43b7, #7aff42);
   -webkit-background-clip: text;
