--- a/src/index.css
+++ b/src/index.css
@@ -10,7 +10,7 @@
 }
 
 /* Small screen display */
-@media only screen and (min-width: 200px) and (max-width: 480px) {
+@media only screen and (min-width: 200px) and (max-width: 640px) {
   .mainBackground {
     background-image: url("./images/paintBackground.png");
     background-color: rgba(255, 255, 255, 0.2);
@@ -18,6 +18,13 @@
   }
 
   .formSettings {
+    margin-top: 3vh;
+    margin-left: 3vh;
+    margin-right: 3vh;
+    background-color: white;
+  }
+
+  .loginFormSettings {
     margin-top: 7vh;
     margin-left: 3vh;
     margin-right: 3vh;
@@ -26,7 +33,7 @@
 }
 
 /* Small to Medium display (Change the width of the form) */
-@media only screen and (min-width: 481px) and (max-width: 920px) {
+@media only screen and (min-width: 641px) and (max-width: 920px) {
   .mainBackground {
     background-image: url("./images/paintBackground.png");
     background-color: rgba(255, 255, 255, 0.2);
@@ -34,12 +41,18 @@
   }
 
   .formSettings {
-    margin-top: 10vh;
-    margin-left: 15vh;
-    margin-right: 15vh;
+    margin-top: 3vh;
+    margin-left: 25vh;
+    margin-right: 25vh;
     background-color: white;
   }
 
+  .loginFormSettings {
+    margin-top: 10vh;
+    margin-left: 25vh;
+    margin-right: 25vh;
+    background-color: white;
+  }
 }
 
 /* Medium to Large display */
@@ -51,6 +64,13 @@
   }
 
   .formSettings {
+    margin-top: 3vh;
+    margin-left: 45vh;
+    margin-right: 45vh;
+    background-color: white;
+  }
+
+  .loginFormSettings {
     margin-top: 10vh;
     margin-left: 40vh;
     margin-right: 40vh;
@@ -113,7 +133,7 @@
   font-family: 'paintball';
   font-size: 3em;
   display: block;
-  margin-top: 2%;
+  margin-top: 0%;
   margin-bottom: 1%;
   text-align: center;
   background: linear-gradient(to bottom, #ff43b7, #7aff42);
