--- a/src/index.css
+++ b/src/index.css
@@ -21,6 +21,7 @@
     margin-top: 3vh;
     margin-left: 3vh;
     margin-right: 3vh;
+    padding: 10px;
     background-color: white;
   }
 
@@ -28,6 +29,7 @@
     margin-top: 7vh;
     margin-left: 3vh;
     margin-right: 3vh;
+    padding: 10px;
     background-color: white;
   }
 }
@@ -44,6 +46,7 @@
     margin-top: 3vh;
     margin-left: 25vh;
     margin-right: 25vh;
+    padding: 10px;
     background-color: white;
   }
 
@@ -51,6 +54,7 @@
     margin-top: 10vh;
     margin-left: 25vh;
     margin-right: 25vh;
+    padding: 10px;
     background-color: white;
   }
 }
@@ -67,6 +71,7 @@
     margin-top: 3vh;
     margin-left: 45vh;
     margin-right: 45vh;
+    padding: 10px;
     background-color: white;
   }
 
@@ -74,6 +79,7 @@
     margin-top: 10vh;
     margin-left: 40vh;
     margin-right: 40vh;
+    padding: 10px;
     background-color: white;
   }
 }
