--- a/src/index.css
+++ b/src/index.css
@@ -17,6 +17,14 @@
     background-blend-mode: lighten;
   }
 
+  .chatFormSettings {
+    margin-top: 3vh;
+    margin-left: 3vh;
+    margin-right: 3vh;
+    padding: 10px;
+    background-color: white;
+  }
+
   .formSettings {
     margin-top: 3vh;
     margin-left: 3vh;
@@ -42,6 +50,14 @@
     background-blend-mode: lighten;
   }
 
+  .chatFormSettings {
+    margin-top: 3vh;
+    margin-left: 10vh;
+    margin-right: 10vh;
+    padding: 10px;
+    background-color: white;
+  }
+
   .formSettings {
     margin-top: 3vh;
     margin-left: 25vh;
@@ -65,6 +81,14 @@
     background-image: url("./images/bodyBackground.png");
     background-color: rgba(255, 255, 255, 0.7);
     background-blend-mode: lighten;
+  }
+
+  .chatFormSettings {
+    margin-top: 3vh;
+    margin-left: 10vh;
+    margin-right: 10vh;
+    padding: 10px;
+    background-color: white;
   }
 
   .formSettings {
