--- a/src/index.css
+++ b/src/index.css
@@ -76,7 +76,7 @@
 }
 
 /* Medium to Large display */
-@media only screen and (min-width: 921px) and (max-width: 1440px) {
+@media only screen and (min-width: 921px) and (max-width: 1200px) {
   .mainBackground {
     background-image: url("./images/bodyBackground.png");
     background-color: rgba(255, 255, 255, 0.7);
@@ -105,6 +105,15 @@
     margin-right: 40vh;
     padding: 10px;
     background-color: white;
+  }
+}
+
+/* Large to XLarge display */
+@media only screen and (min-width: 1441px) and (max-width: 3000px) {
+  .mainBackground {
+    background-image: url("./images/bodyBackground.png");
+    background-color: rgba(255, 255, 255, 0.7);
+    background-blend-mode: lighten;
   }
 }
 
