--- a/src/index.css
+++ b/src/index.css
@@ -43,7 +43,7 @@
 }
 
 /* Small to Medium display (Change the width of the form) */
-@media only screen and (min-width: 641px) and (max-width: 920px) {
+@media only screen and (min-width: 641px) and (max-width: 1440px) {
   .mainBackground {
     background-image: url("./images/paintBackground.png");
     background-color: rgba(255, 255, 255, 0.2);
@@ -114,6 +114,30 @@
     background-image: url("./images/bodyBackground.png");
     background-color: rgba(255, 255, 255, 0.7);
     background-blend-mode: lighten;
+  }
+  
+  .chatFormSettings {
+    margin-top: 3vh;
+    margin-left: 10vh;
+    margin-right: 10vh;
+    padding: 10px;
+    background-color: white;
+  }
+
+  .formSettings {
+    margin-top: 3vh;
+    margin-left: 45vh;
+    margin-right: 45vh;
+    padding: 10px;
+    background-color: white;
+  }
+
+  .loginFormSettings {
+    margin-top: 10vh;
+    margin-left: 40vh;
+    margin-right: 40vh;
+    padding: 10px;
+    background-color: white;
   }
 }
 
